syntax = "proto3";

package telemetry.message.event;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

message HubEventProto {
  string hub_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  oneof payload {
    DeviceAddedEventProto device_added = 3;
    DeviceRemovedEventProto device_removed = 4;
    ScenarioAddedEventProto scenario_added = 5;
    ScenarioRemovedEventProto scenario_removed = 6;
  }
}

enum DeviceTypeProto {
  // Варианты значений enum DeviceTypeProto
  MOTION_SENSOR = 0;      // датчик движения
  TEMPERATURE_SENSOR = 1; // датчик температуры
  LIGHT_SENSOR = 2;       // датчик освещённости
  CLIMATE_SENSOR = 3;     // датчик контроля климата
  SWITCH_SENSOR = 4;      // переключатель
}

message DeviceAddedEventProto {
  string id = 1;
  DeviceTypeProto device_type = 2;
}

message DeviceRemovedEventProto {
  string id = 1;
}

enum ConditionTypeProto {
  MOTION = 0;
  LUMINOSITY = 1;
  SWITCH = 2;
  TEMPERATURE = 3;
  CO2LEVEL = 4;
  HUMIDITY = 5;
}

enum ConditionOperationProto {
  EQUALS = 0;
  GREATER_THAN = 1;
  LOWER_THAN = 2;
}

message ScenarioConditionProto {
  string sensor_id = 1;
  ConditionTypeProto type = 2;
  ConditionOperationProto operation = 3;
  oneof value {
    bool bool_value = 4;
    int32 int_value = 5;
  }
}

enum ActionTypeProto {
  ACTIVATE = 0;
  DEACTIVATE = 1;
  INVERSE = 2;
  SET_VALUE = 3;
}

message DeviceActionProto {
  string sensor_id = 1;
  ActionTypeProto type = 2;
  optional int32 value = 3;
}

message ScenarioAddedEventProto {
  string id = 1;
  repeated ScenarioConditionProto condition = 2;
  repeated DeviceActionProto action = 3;
}

message ScenarioRemovedEventProto {
  string id = 1;
}