syntax = "proto3";

package telemetry.messages.collector;

import "telemetry/messages/sensor_event.proto";
import "telemetry/messages/hub_event.proto";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.collector";

service CollectorController {
  rpc CollectSensorEvent (telemetry.messages.event.SensorEventProto)
      returns (google.protobuf.Empty);

  rpc CollectHubEvent (telemetry.messages.event.HubEventProto)
      returns (google.protobuf.Empty);
}